source/stylesheets/style.css
body {
	font-size:18px;
	line-height:24px;
}

article {
  max-width:725px;
}

.bar-indicator { 
	width: 220px;
	height: 20px;
	background: url(/images/bar-indicator.gif);
}

.result a.title { text-decoration:underline; }
.result small { color:#093; }

.anchor { margin-left: -14px;
font-size: 14px;
color: black;
line-height: 26px;
}

.anchor-icon {
  display: inline-block;
  width:14px;
}

.anchor-icon i {
  left: -3px;
  position: relative;
}

.icon-link { display:none; }

#logo {
	margin-top:18px;
	display:inline-block;
	width:160px;
	height:45px;
	background: url(/images/sendgrid-logo.png?embed=true);
}

#content img {
	border-bottom: 2px solid #CCC;
	border-top: 2px solid #CCC;
	padding-top:5px;
	padding-bottom:5px;
}

li { line-height:24px; }

hr.docs-separator {
	margin: 40px 0 39px;
}

blockquote { background-color: #FFFFED; }

.code-buttons {
  margin-top:0;
  margin-bottom: -19px;
}

.code-buttons > .nav-tabs > li > .copycode {
  padding-top:2px;
  padding-bottom:2px;
  border:1px solid #EEE;
}

.code-buttons > .nav-tabs > li {
  background-color:white;
} 

.hover { 
  border-color: #eee #eee #ddd;
  text-decoration: none;
  background-color: #eee;
}

.tab-content {
	padding: 10px;
	border: 1px solid #DDD;
	margin-top: -19px;
	margin-bottom: 10px;
	background: url(/images/subtle_dots.png?embed=true);
}

.nav-tabs > .active > a {
	background: url(/images/subtle_dots.png?embed=true);	
}

#header-top { min-height: 78px; background-color: #262729; border-top: 1px solid #000; }

#header-top > .container-fluid { min-height:78px; }

#header-search { margin-top:26px; }

#nav { min-height: 35px; background-color: #1b1c1e; border-top: 1px solid #000; border-bottom: 2px solid #287abe; margin-bottom: 0; }
#nav ul { list-style-type: none; }
#nav .nav-link { height: 35px;}
#nav .nav-link a { padding: 12px 22px 9px 22px; line-height: 14px;  color: #fff; text-transform: uppercase; font-size: 11px; border-bottom: 2px solid #287abe; }
.current-page-item { background-color: #287abe; }
#nav .nav-link a:hover { text-decoration: none; background-color: #15456d; }
#nav .nav > li > a { text-shadow: none; }
#nav .btn-navbar { color: #000; padding: 1px 10px; }

.nav-list li { line-height:20px; }

.nav-list > .active > a { text-shadow: 0 1px 0 rgba(255, 143, 0, .5); }

.nav-list [class^="icon-"] {
margin-right: 2px;
margin-top: 2px;
}

.sidebar-nav .nav-header { font-size:15px}

#logo a
{
	float: left;
	margin-top: -8px;
	position: relative;
}

/* Responsive menu stuff */
#header-wrap .navbar-inner { 
	min-height:0;
	background: none;
	border: 0;
	box-shadow: 0 0 0;
	padding:0;
}

#header { width: 100%; }

#header-wrap .btn-navbar { 
	float:none;
	margin-top:13px;
}

.navbar-search .search-query { 
	background-color: white; 
}

/* footer */
#footer { min-width: 940px; width: 100%; font-size: 11px; }
#footer-top { background-color: #262729; }
#footer-top .row { margin-top: 20px; }
#footer ul { list-style-type: none; }
#footer li.heading { margin-bottom: 10px; text-transform: uppercase; color: #fff; font-size: 11px; }
#footer li a, #footer li { color: #a6a7b2; }
#footer li a:hover { text-decoration: none; color: #fff; }
#footer li { margin: 2px 0; }
#footer-bottom { background-color: #1b1c1e; border-top: 1px solid #000; margin-bottom: -20px; }
#footer-bottom li { float: left; padding: 15px 10px; font-size: 11px; }
#footer-bottom li:first-child { padding-left: 0; }
html, body {height: 100%;}

#content {
  padding-top:25px;
  overflow:auto;
	padding-bottom: 227px;}  /* must be same height as the footer */

#footer {
  padding-top:15px;
  position: relative;
	line-height:15px;
	margin-top: -227px; /* negative value of footer height */
	height: 212px;
	clear:both;} 

/*Opera Fix*/
body:before {
	content:"";
	height:100%;
	float:left;
	width:0;
	margin-top:-32767px;/
}

.sidebar-nav > #nav-menu { border-right: 1px solid #ddd; font-size: 17px; line-height:21px; }

.callout > a { color: rgb(240, 132, 2); }
.callout > h2 { font-size: 18px; }

.label, .badge { font-size: 15px; }

.navbar-search .search-icon {
position: absolute;
top: 0;
right: 2px;
display: block;
width: 26px;
height: 26px;
cursor: pointer;
}

li.collapsibleListOpen{
	padding: 3px 15px;
	background: url('/images/minus.png?embed=true') no-repeat 0px 5px;
	cursor: pointer;
	padding-left: 17px;
}

.nav-menu .subtree-name: { padding: 3px 15px; }
.subtree-name:hover{ background-color: #EEE; }
.subtree-name:hover{ background-color: #EEE; }

li.collapsibleListClosed{
	padding: 3px 15px;
	background: url('/images/plus.png?embed=true') no-repeat 0px 5px;
	cursor: pointer;
	padding-left: 17px;
}

